<resources>
    <string name="app_name">System</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="latitude">latitude:</string>
    <string name="longitude">longitude:</string>
    <string name="Send">Send</string>
    <string name="providerTW">Provider:</string>
    <string name="start_service">start service</string>
    <string name="stop_service">stop service</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="default_notification_channel_name" translatable="true">News</string>
</resources>
